--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+/* RESET CSS  */
+html{
+    font-size: 16px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+body{
+    @apply text-body
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+svg, a, button, li{
+    @apply cursor-pointer
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+h1{
+    @apply text-h1
+}
+h2{
+    @apply text-h2
+}
+h3{
+    @apply text-h3
+}
+h4{
+    @apply text-h4
+}
+h5{
+    @apply text-h5
+}
+h6{
+    @apply text-h6
+}
+
+p{
+    @apply text-p
+}
+span{
+    @apply text-span
 }
